// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container(Form) should pass props to Form lib 1`] = `
Object {
  "ArrayFieldTemplate": [Function],
  "actions": Array [],
  "buttonBlockClass": undefined,
  "children": undefined,
  "className": "tc-form rjsf foo pristine",
  "customFormats": undefined,
  "customValidation": undefined,
  "data": Object {
    "jsonSchema": Object {
      "schema": true,
    },
    "properties": Object {},
    "uiSchema": Object {
      "uiSchema": true,
    },
  },
  "fields": undefined,
  "getComponent": undefined,
  "language": undefined,
  "onChange": [Function],
  "onErrors": [Function],
  "onSubmit": [Function],
  "onTrigger": [Function],
  "other": true,
  "uiform": undefined,
  "widgets": undefined,
}
`;

exports[`Container(Form) should render a Form 1`] = `
<FormSwitcher
  ArrayFieldTemplate={[Function]}
  actions={Array []}
  buttonBlockClass={undefined}
  className="tc-form rjsf pristine"
  customFormats={undefined}
  customValidation={undefined}
  data={
    Object {
      "jsonSchema": Object {
        "schema": true,
      },
      "properties": Object {},
      "uiSchema": Object {
        "uiSchema": true,
      },
    }
  }
  fields={undefined}
  getComponent={undefined}
  language={undefined}
  onChange={[Function]}
  onErrors={[Function]}
  onSubmit={[Function]}
  onTrigger={undefined}
  other={true}
  uiform={undefined}
  widgets={undefined}
/>
`;

exports[`Container(Form) should use props.onChange 1`] = `
Array [
  Object {
    "foo": "bar",
  },
]
`;

exports[`Container(Form) should use props.onChange 2`] = `
Array [
  Object {
    "data": undefined,
    "dirty": true,
  },
]
`;
